# rokeycamp4-teamproject3-rokeypharmacy

./: README.md
launch/: test.launch.py
meditts/: README.md  STT.py  STT_QR_connect.py  medicine_send.py  medicine_server.py  medicines.json  tts_messages.json
pharmacy_interface/: CMakeLists.txt  package.xml
pharmacy_interface/srv/: MediCine.srv  MediInfo.srv
pharmacy_v2/: README  auto_move.py  basic_def.py  box_seg.py  go_main.py  nav_waypoint.py  pill_seg.py  realsense.py  test.launch.py
pharmacy_v2/config/: T_gripper2camera.npy  waypoint.json
