<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pharmacy_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ujinrainer1004@gmail.com">ohjunseok</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>



  <buildtool_depend>rosidl_default_generators</buildtool_depend> <!--추가된 부분-->
  <exec_depend>builtin_interfaces</exec_depend>                   <!--추가된 부분 build 를 builtin으로 수정함-->
  <exec_depend>rosidl_default_runtime</exec_depend>             <!--추가된 부분-->
  <member_of_group>rosidl_interface_packages</member_of_group>  <!--추가된 부분-->


<!-- rosidl_default_generators : 코드 생성기
    .msg, .srv, .action 파일을 읽어서 c++ python 등 언어 타입지원 코드를 생성시키고
    colconbuild시에 msg 파일을 코드로 변환하는 역학을 하며 자동실행됨
    build_interfaces : 런타임에서 메시지 타입 사용 가능하게 함
    rosidl_interface_package : 인터페이스 전용 패키지 만들 때 쓰이는 태그
-->


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
